kustomization/overlays/prod/postgres-operator/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: postgres-operator-ingress
spec:
  rules:
    - host: minio-postgres.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: postgres-backup-tenant-console
                port:
                  name: http-console
            path: /
            pathType: Prefix
